--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,7 +1,7 @@
 
-<div>
-  <p>{{comment.getName()}}</p>
+<div class="jumbotron">
+  <h4>{{comment.getName()}}</h4>
   <p>{{comment.getBody()}}</p>
-  <p>{{comment.getEmail()}}</p>
+  <p class="email">{{comment.getEmail()}}</p>
 </div>
 
