--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,7 @@
             <app-bees (getBee)='currentBee($event)' [bees]='bees'></app-bees>
         </div>
 
-        <div class="col-sm-3 col-md-3">
-            <app-posts [myCurrentBee]='myCurrentBee' [iAmBee]='iAmBee'></app-posts>
-        </div>
-
-        <div class="col-sm-3 col-md-3">
-            <app-album [myCurrentBee]='myCurrentBee'></app-album>
-        </div>
-        
-        <div class="col-sm-3 col-md-3">
-            <app-todos [myCurrentBee]='myCurrentBee'></app-todos>
-        </div>
+        <app-bee-activity [myCurrentBee]='myCurrentBee' [iAmBee]='iAmBee' ></app-bee-activity>
 
             
     </div>
