--- a/src/app/components/bee-activity/bee-activity.component.html
+++ b/src/app/components/bee-activity/bee-activity.component.html
@@ -1,3 +1,19 @@
-<p>
-  bee-activity works!
-</p>
+<div>
+     <div class="col-sm-3 col-md-3">
+            <app-posts (getCurrentPost)='myPost($event)' [myCurrentBee]='myCurrentBee' [iAmBee]='iAmBee'></app-posts>
+        </div>
+
+        <div class="col-sm-3 col-md-3">
+            <app-album [myCurrentBee]='myCurrentBee'></app-album>
+        </div>
+        
+        <div class="col-sm-3 col-md-3">
+            <app-todos [myCurrentBee]='myCurrentBee'></app-todos>
+        </div>
+
+        <app-new-comment [iAmBee]='iAmBee' [littlePost]="littlePost"></app-new-comment>
+
+        <app-new-post [myCurrentBee]='myCurrentBee'></app-new-post>
+
+        <app-new-todo [myCurrentBee]='myCurrentBee'></app-new-todo>
+</div>
