--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,4 +1,4 @@
 <div>
-<p>{{photo.getTitle()}}</p>
+<p class="title" >{{photo.getTitle()}}</p>
 <img class="img-rounded centered" src="{{photo.getUrl()}}"/>
 </div>
