--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3 col-md-3">
-            <app-bees (getBee)='currentBee($event)' [bees]='bees'></app-bees>
+            <app-bees (getBee)='currentBee($event)' [bees]='bees' [showArray]='showArray'></app-bees>
         </div>
 
-        <app-bee-activity [myCurrentBee]='myCurrentBee' [iAmBee]='iAmBee' ></app-bee-activity>
+        <app-bee-activity [showArray]='showArray' [myCurrentBee]='myCurrentBee' [iAmBee]='iAmBee' ></app-bee-activity>
 
             
     </div>
