--- a/src/app/components/bee/bee.component.scss
+++ b/src/app/components/bee/bee.component.scss
@@ -1,5 +1,6 @@
 .jumbotron{
     padding: 10px;
+    background:#F5D756;
 }
 p{
     font-size: 14px;
@@ -8,3 +9,18 @@ p{
 img{
     width: 130px;
 }
+
+.btn{
+        background: #465B8F;
+        border-color: #465B8F;
+        color: #590408;
+        &:hover{
+            background: #607CBF;
+            color:#ffffff;
+        }
+       
+    }
+
+   .info-btn{
+            margin:10px 0;
+        }
